[gd_scene load_steps=6 format=3 uid="uid://b6rtuubsw5aqw"]

[ext_resource type="Script" path="res://Scenes/night_scene/day_and_night.gd" id="1_171ex"]

[sub_resource type="Animation" id="Animation_bdeqk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.588235)]
}

[sub_resource type="Animation" id="Animation_v58tk"]
resource_name = "day_to_night"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.784314)]
}

[sub_resource type="Animation" id="Animation_gj8i7"]
resource_name = "night_to_day"
length = 90.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 89.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.784314), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6456"]
_data = {
"RESET": SubResource("Animation_bdeqk"),
"day_to_night": SubResource("Animation_v58tk"),
"night_to_day": SubResource("Animation_gj8i7")
}

[node name="day_and_night" type="StaticBody2D"]
script = ExtResource("1_171ex")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2669.0
offset_top = -1779.0
offset_right = 2990.0
offset_bottom = 2300.0
color = Color(0, 0, 0, 0.588235)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d6456")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true

[node name="change_level" type="Timer" parent="."]
wait_time = 20.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="change_level" to="." method="_on_change_level_timeout"]
